--- a/login.html
+++ b/login.html
@@ -11,5 +11,6 @@
     <input type="password" id="password" name="password"><br><br>
     <input type="submit" value="Submit">
   </form>
+  <p>Тут тоже красоту навёдем логин user  пароль pass </p>
 </body>
 </html>
