--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Welcome!</h1>
-  <h2>Test </h2>
+  <h2>Тут ещё надо будет красоты навести и добавить систему оплаты </h2>
 </body>
 </html>
