--- a/welcome.html
+++ b/welcome.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome</title>
+  <title>Основа</title>
 </head>
 <body>
-  <h1>Welcome!</h1>
+  <h1>Велком</h1>
   <h2>Тут ещё надо будет красоты навести и добавить систему оплаты </h2>
 </body>
 </html>
