--- a/login.html
+++ b/login.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Авторизация</title>
+  <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-  {{ if .error }}
-    <p style="color: red;">{{ .error }}</p>
-  {{ end }}
-
   <form action="/" method="post">
-    <label for="username">Логин:</label><br>
-    <input type="text" id="username" name="username"><br>
-    <label for="password">Пароль:</label><br>
-    <input type="password" id="password" name="password"><br><br>
+    <h2>Вход</h2>
+    <label for="username">Логин:</label>
+    <input type="text" id="username" name="username" required>
+    <label for="password">Пароль:</label>
+    <input type="password" id="password" name="password" required>
     <input type="submit" value="Войти">
+    <p>У вас нет аккаунта? <a href="/register">Регистрация</a></p>
   </form>
-  <p>У вас есть аккаунт? <a href="/register">Регистрация</a></p>
+  <script src="static/script.js"></script>
 </body>
 </html>
+
+
+
