--- a/register.html
+++ b/register.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Регистрация</title>
+  <link rel="stylesheet" href="static/style2.css">
 </head>
 <body>
   <form action="/register" method="post">
-    <label for="username">Логин</label><br>
-    <input type="text" id="username" name="username"><br>
-    <label for="password">Пароль</label><br>
-    <input type="password" id="password" name="password"><br><br>
-    <input type="submit" value="Зарегестрироваться">
+    <h2>Регистрация</h2>
+    <label for="username">Логин:</label>
+    <input type="text" id="username" name="username" required>
+    <label for="password">Пароль:</label>
+    <input type="password" id="password" name="password" required>
+    <label for="confirm-password">Подтверждение пароля:</label>
+    <input type="password" id="confirm-password" name="confirm-password" required>
+    <input type="submit" value="Зарегистрироваться">
+    <p>Уже есть аккаунт? <a href="/">Вход</a></p>
   </form>
+  <script src="static/script2.js"></script>
 </body>
 </html>
