--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Регистрация</title>
-  <link rel="stylesheet" href="static/style2.css">
+  <link rel="stylesheet" href="static/register.css">
 </head>
 <body>
   <form action="/register" method="post">
@@ -18,6 +18,6 @@
     <input type="submit" value="Зарегистрироваться">
     <p>Уже есть аккаунт? <a href="/">Вход</a></p>
   </form>
-  <script src="static/script2.js"></script>
+  <script src="static/register.js"></script>
 </body>
 </html>
