--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Авторизация</title>
-  <link rel="stylesheet" href="static/login.css">
+  <link rel="stylesheet" href="static/login/login.css">
 </head>
 <body>
   <form action="/" method="post">
@@ -16,7 +16,7 @@
     <input type="submit" value="Войти">
     <p>У вас нет аккаунта? <a href="/register">Регистрация</a></p>
   </form>
-  <script src="static/login.js"></script>
+  <script src="static/login/login.js"></script>
 </body>
 </html>
 
