--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Добро пожаловать!</title>
-  <link rel="stylesheet" href="static/welcome.css">
+  <link rel="stylesheet" href="./css/welcome.css">
 </head>
 <body>
   <div class="container">
@@ -12,7 +12,6 @@
     <div class="api-key-section">
       <h2>API Ключ:</h2>
       <input type="text" id="api-key" placeholder="Введите ваш API-ключ" readonly>
-      <button id="generate-api-key">Сгенерировать новый API-ключ</button>
     </div>
 
     <div class="actions">
@@ -31,6 +30,6 @@
     </div>
   </div>
 
-  <script src="static/welcome.js"></script>
+  <script src="./js/welcome.js"></script>
 </body>
 </html>
